[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy"
version = "0.1.0"
description = "A package implementing a Bitalino device ComfyUI custom node."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
    { name = "Alexander Loktyushin", email = "aloktyus@uos.de" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lunarring/bitalino_comfy"
Repository = "https://github.com/lunarring/bitalino_comfy"

[tool.setuptools.packages.find]
where = ["."]